Alignments of Cards & Paginations Fixed

--- a/src/app/main/events/events.component.css
+++ b/src/app/main/events/events.component.css
@@ -63,7 +63,7 @@
 }
 
 .dark:before {
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0,0,0,0.1);
 }
 
 .outline-modal {
@@ -92,4 +92,26 @@
 
 .shadows {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.pagination {
+  display: inline-block;
+}
+
+.pagination a {
+  color: white;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+.pagination a.active {
+  background-color: #7e1e80;
+  color: white;
+  border-radius: 5px;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+  border-radius: 5px;
 }
